--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <title>Simulado PC Bahia</title>
-  <style>
-    body { font-family: Arial; margin: 20px; }
-    .questao { margin-bottom: 20px; }
-    #rodape { margin-top: 50px; font-size: 0.8em; color: gray; }
-  </style>
-</head>
 <body>
   <h1>Simulado PC Bahia</h1>
+
+  <!-- Filtro por disciplina -->
+  <label for="filtro">Filtrar por disciplina:</label>
+  <select id="filtro">
+    <option value="todas">Todas</option>
+  </select>
+  <button onclick="filtrar()">Filtrar</button>
+
+  <!-- Sorteio de questões -->
+  <button onclick="sortear()">🎲 Sortear questões aleatórias</button>
+
   <div id="simulado"></div>
   <button onclick="finalizar()">Finalizar</button>
   <div id="resultado"></div>
+  <div id="pontuacao"></div>
   <div id="rodape">Desenvolvido por Edmile Lopes</div>
 
   <script src="script.js"></script>
 </body>
-</html>
